test-suite/output/ErrorLocation_12774_3.out
File "./output/ErrorLocation_12774_3.v", line 3, characters 0-1:
Error: No product even after head-reduction.

