test-suite/output/ErrorLocation_12774_3.v
Ltac f := auto; intro.
Goal False.
f.
Abort.
